--- a/css/blog-home.css
+++ b/css/blog-home.css
@@ -158,3 +158,8 @@ body {
   border-radius: 0px;
 }
 /*-------------------------------CSS FIN LOGIN----------------------------*/
+
+#conactoFondo{
+    background: url("../img/formcontact.jpg") no-repeat !important;
+    background-size: cover;
+}
